[package]
name = "flaca"
version = "1.9.0"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2021"
rust-version = "1.59"
description = "Brute-force, lossless JPEG and PNG compression."
readme = "README.md"
publish = false
exclude = [
	".gitignore",
	".righteous-sandbox.json",
	"about.toml",
	"doc",
	"justfile",
	"release",
]

[package.metadata.deb]
maintainer = "Josh Stoik <hello@blobfolio.com>"
copyright = "2022, Blobfolio, LLC <hello@blobfolio.com>"
license-file = ["./LICENSE", "0"]
extended-description = """\n\
Flaca is a CLI tool for x86-64 Linux machines that simplifies the task of losslessly compressing JPEG and PNG images for use on the web.\n\
.\n\
Under the hood, it uses MozJPEG for lossless JPEG (re)compression, and Oxipng/Zopflipng for lossless PNG (re)compression."""
revision = "1"
depends = "$auto"
section = "graphics"
assets = [
    ["./target/x86_64-unknown-linux-gnu/release/flaca", "usr/bin/", "755"],
    ["./release/completions/flaca.bash", "etc/bash_completion.d/", "644"],
    ["./release/man/flaca.1.gz", "usr/share/man/man1/", "644"],
]

[package.metadata.bashman]
name = "Flaca"
bash-dir = "./release/completions"
man-dir = "./release/man"
credits-dir = "./"

[[package.metadata.bashman.switches]]
short = "-h"
long = "--help"
description = "Print help information and exit."

[[package.metadata.bashman.switches]]
long = "--no-jpeg"
description = "Skip JPEG images."

[[package.metadata.bashman.switches]]
long = "--no-png"
description = "Skip PNG images."

[[package.metadata.bashman.switches]]
short = "-p"
long = "--progress"
description = "Show progress bar while minifying."

[[package.metadata.bashman.switches]]
short = "-V"
long = "--version"
description = "Print version information and exit."

[[package.metadata.bashman.options]]
short = "-l"
long = "--list"
label = "<FILE>"
description = "Read (absolute) image and/or directory paths from this text file, one entry per line."
path = true

[[package.metadata.bashman.arguments]]
label = "<PATH(s)…>"
description = "One or more image and/or directory paths to losslessly compress."

[[package.metadata.bashman.sections]]
name = "OPTIMIZERS"
inside = true
items = [
	[ "MozJPEG", "<https://github.com/mozilla/mozjpeg>" ],
	[ "Oxipng", "<https://github.com/shssoichiro/oxipng>" ],
	[ "Zopflipng", "<https://github.com/google/zopfli>" ]
]

[dependencies]
argyle = "0.5.*, >=0.5.3"
ctrlc = "=3.2.1"
dowser = "0.4.*, >=0.4.3"
libc = "0.2.*"
once_cell = "=1.10.0"
rayon = "=1.5.2"
write_atomic = "0.2.*"

[dependencies.fyi_msg]
version = "0.9.*"
features = [ "progress", "parking_lot_mutex" ]

[dependencies.mozjpeg-sys]
version = "=1.0.1"
features = [ "jpegtran" ]

[dependencies.oxipng]
version = "=5.0.1"
default-features = false
features = [ "libdeflater" ]

[build-dependencies]
cc = "=1.0.73"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
