[package]
name = "flaca"
version = "1.5.6"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2018"
description = "Brute-force, lossless JPEG and PNG compression."
publish = false

[package.metadata.deb]
maintainer = "Josh Stoik <hello@blobfolio.com>"
copyright = "2021, Blobfolio, LLC <hello@blobfolio.com>"
license-file = ["../LICENSE", "0"]
extended-description = """\n\
Flaca is a CLI tool for x86-64 Linux machines that simplifies the task of losslessly compressing JPEG and PNG images for use on the web.\n\
.\n\
Under the hood, it uses MozJPEG for lossless JPEG (re)compression, and Oxipng/Zopflipng for lossless PNG (re)compression."""
revision = "1"
depends = "$auto, libjpeg-turbo-progs, libturbojpeg1 | libjpeg62-turbo | libjpeg-turbo8"
section = "utility"
assets = [
    ["../target/x86_64-unknown-linux-gnu/release/flaca", "usr/bin/", "755"],
    ["../release/completions/flaca.bash", "etc/bash_completion.d/", "644"],
    ["../release/man/flaca.1.gz", "usr/share/man/man1/", "644"],
    ["../release/zopflipng", "var/lib/flaca/", "755"],
]

[package.metadata.bashman]
name = "Flaca"
bash-dir = "../release/completions"
man-dir = "../release/man"

[[package.metadata.bashman.switches]]
short = "-h"
long = "--help"
description = "Print help information."

[[package.metadata.bashman.switches]]
short = "-p"
long = "--progress"
description = "Show progress bar while working."

[[package.metadata.bashman.switches]]
short = "-V"
long = "--version"
description = "Print program version."

[[package.metadata.bashman.options]]
short = "-l"
long = "--list"
label = "<FILE>"
description = "Read file paths from this text file."
path = true

[[package.metadata.bashman.arguments]]
label = "<PATH(s)…>"
description = "Any number of files and directories to crawl and crunch."

[[package.metadata.bashman.sections]]
name = "OPTIMIZERS"
inside = true
items = [
	[ "MozJPEG", "<https://github.com/mozilla/mozjpeg>" ],
	[ "Oxipng", "<https://github.com/shssoichiro/oxipng>" ],
	[ "Zopflipng", "<https://github.com/google/zopfli>" ]
]

[dependencies.flaca_core]
path = "../flaca_core"

[dependencies.fyi_menu]
git = "https://github.com/Blobfolio/fyi.git"
tag = "v0.5.5"

[dependencies.fyi_msg]
git = "https://github.com/Blobfolio/fyi.git"
tag = "v0.5.5"

[dependencies.fyi_witcher]
git = "https://github.com/Blobfolio/fyi.git"
tag = "v0.5.5"
features = [ "witching" ]
