[package]
name = "flaca"
version = "3.5.0"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2024"
description = "Brute-force, lossless GIF, JPEG, and PNG compression."
readme = "../README.md"
publish = false
exclude = [
	".gitignore",
	".righteous-sandbox.json",
	"doc",
	"justfile",
	"release",
]

[package.metadata.deb]
maintainer = "Josh Stoik <josh@blobfolio.com>"
copyright = "2025, Blobfolio, LLC <hello@blobfolio.com>"
license-file = ["../LICENSE", "0"]
extended-description = """\n\
Flaca is a CLI tool for x86-64 Linux machines that simplifies the task of losslessly compressing GIF, JPEG, and PNG images for use on the web.\n\
.\n\
Under the hood, it uses Gifsicle for lossless GIF (re)compression, MozJPEG for JPEGs, and Oxipng/Zopflipng for PNGs."""
revision = "1"
depends = "$auto"
section = "graphics"
assets = [
    ["../target/release/flaca", "usr/bin/", "755"],
    ["../release/completions/flaca.bash", "etc/bash_completion.d/", "644"],
    ["../release/man/flaca.1.gz", "usr/share/man/man1/", "644"],
]

[package.metadata.bashman]
name = "Flaca"
bash-dir = "../release/completions"
man-dir = "../release/man"
credits-dir = "../"

[[package.metadata.bashman.switches]]
short = "-h"
long = "--help"
description = "Print help information and exit."

[[package.metadata.bashman.switches]]
long = "--no-gif"
description = "Skip GIF images."

[[package.metadata.bashman.switches]]
long = "--no-jpeg"
description = "Skip JPEG images."

[[package.metadata.bashman.switches]]
long = "--no-png"
description = "Skip PNG images."

[[package.metadata.bashman.switches]]
long = "--no-symlinks"
description = "Ignore symlinks (rather than following them)."

[[package.metadata.bashman.switches]]
long = "--preserve-times"
description = "(Try to) preserve the original file access and modification times when resaving an image."

[[package.metadata.bashman.switches]]
short = "-p"
long = "--progress"
description = "Show pretty progress while minifying."

[[package.metadata.bashman.switches]]
short = "-V"
long = "--version"
description = "Print version information and exit."

[[package.metadata.bashman.options]]
short = "-j"
label = "<NUM>"
description = "Limit parallelization to this many threads (instead of giving each logical core its own image to work on). If negative, the value will be subtracted from the total number of logical cores."
path = false

[[package.metadata.bashman.options]]
short = "-l"
long = "--list"
label = "<FILE>"
description = "Read (absolute) image and/or directory paths from this text file — or STDIN if '-' — one entry per line, instead of or in addition to any trailing <PATH(S)>."
path = true

[[package.metadata.bashman.options]]
long = "--max-resolution"
label = "<NUM>"
description = "Skip images containing more than <NUM> total pixels to avoid potential OOM errors during decompression. [default: ~4.29 billion]"
path = false

[[package.metadata.bashman.options]]
short = "-z"
label = "<NUM>"
description = "Run <NUM> lz77 backward/forward iterations during zopfli PNG encoding passes. More iterations yield better compression (up to a point), but require *significantly* longer processing times. [default: 20 or 60, depending on the file size]"
path = false

[[package.metadata.bashman.arguments]]
label = "<PATH(s)…>"
description = "One or more image and/or directory paths to losslessly re-compress."

[[package.metadata.bashman.sections]]
name = "EARLY EXIT"
inside = false
lines = [
	"Press CTRL+C once to quit as soon as the already-in-progress operations have",
	"finished (ignoring any pending images still in the queue).",
	"",
	"Press CTRL+C a second time if you need to exit IMMEDIATELY, but note that doing",
	"so may leave artifacts (temporary files) behind, and in rare cases, lead to",
	"image corruption.",
]

[[package.metadata.bashman.sections]]
name = "OPTIMIZERS"
inside = true
items = [
	[ "Gifsicle", "<https://github.com/kohler/gifsicle/>" ],
	[ "MozJPEG", "<https://github.com/mozilla/mozjpeg>" ],
	[ "Oxipng", "<https://github.com/shssoichiro/oxipng>" ],
	[ "Zopflipng", "<https://github.com/google/zopfli>" ]
]

[[package.metadata.bashman.credits]]
name = "lodepng"
version = "2025.5.6"
license = "Zlib"
authors = [ "Lode Vandevenne" ]
repository = "https://github.com/lvandeve/lodepng"

[build-dependencies]
argyle = "0.13.*"

[dependencies]
crossbeam-channel = "=0.5.*"
dactyl = "0.13.*"
dowser = "0.16.*"
gifsicle = "=1.95.0"
libc = "0.2.*"
utc2k = "0.17.*"
write_atomic = "0.7.*"

[dependencies.argyle]
version = "0.13.*"
features = [ "try_paths" ]

[dependencies.flapfli]
version = "*"
path = "../flapfli"

[dependencies.fyi_msg]
version = "2.3.*"
features = [ "signals" ]

[dependencies.image]
version = "=0.25.*"
default-features = false
features = [ "gif" ]

[dependencies.mozjpeg-sys]
version = "=2.2.3"
default-features = false
features = [ "jpegtran", "nasm_simd", "unwinding" ]

[dependencies.oxipng]
version = "=9.1.5"
default-features = false
features = [ "freestanding" ]
