[package]
name = "flaca_core"
version = "1.5.9"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2018"
description = "Brute-force, lossless JPEG and PNG compression."
publish = false

[dependencies]
imghdr = "0.7.*"
lazy_static = "1.4.*"
libc = "*"
tempfile = "3.2.*"

[dependencies.tempfile-fast]
git = "https://github.com/FauxFaux/tempfile-fast-rs.git"
rev = "7cd84b2"

[dependencies.mozjpeg-sys]
version = "0.10.*, >= 0.10.12"
features = [ "jpegtran" ]

[dependencies.oxipng]
version = "4.0.*"
default-features = false
features = [ "libdeflater" ]
