[package]
name = "flapfli"
version = "3.2.3"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2021"
description = "An opinionated Rust rewrite of Zopfli."
readme = ""
publish = false
exclude = [
	".gitignore",
	".righteous-sandbox.json",
	"doc",
	"justfile",
	"release",
]

[dependencies]
crc32fast = "=1.4.*"

[build-dependencies]
bindgen = "0.71.*"
cc = "1.2.*"

[lib]
name = "flapfli"
crate-type = ["staticlib", "lib"]
